# automagic-wallpaper-changer

./: .gitignore  Cargo.toml  README.md
src/: config.rs  index.html  lib.rs  main.rs  wallpaper.rs  weather.rs  worker.rs
